Prevent the radial fade from covering the nav bar on the premium page

--- a/hsreplaynet/static/styles/premium.scss
+++ b/hsreplaynet/static/styles/premium.scss
@@ -38,7 +38,6 @@
 			z-index: 0;
 
 			&.fade-radial {
-				top: -15%;
 				background: radial-gradient(
 					rgba(251, 247, 246, 0.7) 0%,
 					transparent 60%
